[package]
name = "hazelcast-rust-client"
version = "0.1.0"
authors = ["Grzegorz Gierlach <gierlachg@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"

log = "0.4.8"

futures = "0.3.1"
tokio-util = { version = "0.2.0", features = ["codec"] }
tokio = { version = "0.2.9", features = ["full"] }

[dev-dependencies]
rand = "0.7.3"
log4rs = "0.9.0"
